Refactor image URLs and margin in index.html
Updated image URLs and adjusted margin for hero image.

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         .hero-image {
             width: 100%;
             height: 100%;
-            margin-top: 6rem;
+            margin-top: 1rem;
             background-color: #333;
             background-image: url('//b9fe070413d9eb020045866da2feb86e.cdn.bubble.io/f1743788654251x774346561189442200/IMG_3644.jpg');
             background-size: cover;
@@ -1940,7 +1940,7 @@
     <section class="slic-apparel" id="collections">
         <h2 class="section-title">THE COLLECTION</h2>
         <div class="slic-apparel-grid">
-            <div class="slic-apparel-item" style="background-image: url('//3f811272e605d0fbd18ff3cfe4226002.cdn.bubble.io/f1755872890589x938627051760962900/IMG_6077.jpg')" data-product="black-look">
+            <div class="slic-apparel-item" style="background-image: url('https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761227041938x722153572858523800/IMG_1992.jpeg')" data-product="black-look">
                 <div class="slic-apparel-text">
                     <h3>Black Tracksuit</h3>
                     <p>With White Essential Tee</p>
@@ -1970,9 +1970,9 @@
             <div class="tshirt-left">
                 <div class="tshirt-top" data-product="black-tee">
                     <div class="tracksuit-carousel" id="black-tee-carousel">
-                        <div class="carousel-slide active" style="background-image: url('//3f811272e605d0fbd18ff3cfe4226002.cdn.bubble.io/f1758796762707x649243174534703100/IMG_3437.jpg')"></div>
-                        <div class="carousel-slide" style="background-image: url('//3f811272e605d0fbd18ff3cfe4226002.cdn.bubble.io/f1758796535530x889750424402986600/IMG_3618.jpg')"></div>
-                        <div class="carousel-slide" style="background-image: url('//3f811272e605d0fbd18ff3cfe4226002.cdn.bubble.io/f1759230218337x520680627494724860/IMG_3403.jpg')"></div>
+                        <div class="carousel-slide active" style="background-image: url('https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761297974387x355259781351097800/IMG_1944.jpeg')"></div>
+                        <div class="carousel-slide" style="background-image: url('https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761298104036x744576338637050400/IMG_1945.jpeg')"></div>
+                        <div class="carousel-slide" style="background-image: url('https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761316526900x537557559619068900/IMG_1950.jpeg')"></div>
                         <div class="carousel-indicators">
                             <span class="carousel-indicator active" data-index="0"></span>
                             <span class="carousel-indicator" data-index="1"></span>
@@ -1986,9 +1986,9 @@
                 </div>
                 <div class="tshirt-bottom" data-product="white-tee">
                     <div class="tracksuit-carousel" id="white-tee-carousel">
-                        <div class="carousel-slide active" style="background-image: url('//3f811272e605d0fbd18ff3cfe4226002.cdn.bubble.io/f1758809833619x476842145149480900/IMG_3671.jpg')"></div>
-                        <div class="carousel-slide" style="background-image: url('//3f811272e605d0fbd18ff3cfe4226002.cdn.bubble.io/f1758796594950x119446295782265500/IMG_2942.jpg')"></div>
-                        <div class="carousel-slide" style="background-image: url('//3f811272e605d0fbd18ff3cfe4226002.cdn.bubble.io/f1756214095218x978413828237427100/IMG_3663.jpg')"></div>
+                        <div class="carousel-slide active" style="background-image: url('//c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761317109007x577175245706487600/IMG_1941.jpeg')"></div>
+                        <div class="carousel-slide" style="background-image: url('//c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761317165339x389035016898284350/IMG_1943.jpeg')"></div>
+                        <div class="carousel-slide" style="background-image: url('//c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761322141824x750050976866183400/IMG_1946.jpeg')"></div>
                         <div class="carousel-indicators">
                             <span class="carousel-indicator active" data-index="0"></span>
                             <span class="carousel-indicator" data-index="1"></span>
@@ -2343,7 +2343,14 @@
             'black-look': {
                 title: 'Black Tracksuit Look',
                 price: 2322, // 129 * 18
-                images: ['//3f811272e605d0fbd18ff3cfe4226002.cdn.bubble.io/f1755872890589x938627051760962900/IMG_6077.jpg'],
+                images: [
+                    'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761226949002x248105989040648960/IMG_1991.jpeg',
+                    'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761227041938x722153572858523800/IMG_1992.jpeg',
+                    'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761227063344x651930497420196200/IMG_1993.jpeg',
+                    'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761227104554x655816408329799700/IMG_1994.jpeg',
+                    'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761227133266x118003040509468980/IMG_1995.jpeg',
+                    'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761227170133x600760033093228800/IMG_2002.jpeg'
+                ],
                 colors: ['Black'],
                 sizes: ['S', 'M', 'L', 'XL'],
                 description: 'Complete black tracksuit look with white essential tee for a classic style.'
@@ -2351,7 +2358,19 @@
             'black-track-look': {
                 title: 'Brown Track Look',
                 price: 4050, // 225 * 18
-                images: ['//3f811272e605d0fbd18ff3cfe4226002.cdn.bubble.io/f1756214596416x566497322581224000/IMG_6063.jpg'],
+                images: [
+                    'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761227456056x954864920630931800/IMG_1967.jpeg',
+                    'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761227480613x210421173188409800/IMG_1968.jpeg',
+                    'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761227510769x648400193915277400/IMG_1973.jpeg',
+                    'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761227759958x410967114378564300/IMG_1975.jpeg',
+                    'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761227801513x661976210261212500/IMG_1976.jpeg',
+                    'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761229762951x118423325988936240/IMG_1977.jpeg',
+                    'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761229790039x462792440955720900/IMG_1978.jpeg',
+                    'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761229826046x353078951652211260/IMG_1987.jpeg',
+                    'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761229877056x925767749821050000/IMG_1988.jpeg',
+                    'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761229914435x946680727168001300/IMG_1989.jpeg',
+                    'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761229952402x396888715485796740/IMG_1990.jpeg'
+                ],
                 colors: ['Brown'],
                 sizes: ['S', 'M', 'L', 'XL'],
                 description: 'Black track with black essential tee for a sleek monochrome appearance.'
@@ -2359,7 +2378,14 @@
             'blue-look': {
                 title: 'Blue Track Look',
                 price: 4050, // 225 * 18
-                images: ['//3f811272e605d0fbd18ff3cfe4226002.cdn.bubble.io/f1755872055175x320848005050214700/IMG_6072.jpg'],
+               images: [
+                    'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761289096617x259992274447341100/IMG_1960.jpeg',
+                    'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761289137380x206768052457238850/IMG_1961.jpeg',
+                    'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761289177375x828795691971314700/IMG_1962.jpeg',
+                    'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761289210312x561739123039114240/IMG_1963.jpeg',
+                    'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761294054834x120646426753474580/IMG_1965.jpeg',
+                    'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761294102575x984798151546191200/IMG_2001.jpeg'
+                ],
                 colors: ['Blue'],
                 sizes: ['S', 'M', 'L', 'XL'],
                 description: 'Bold blue track with white essential tee for a striking contrast.'
