Fix spelling and update product descriptions
Updated product descriptions and fixed spelling errors in index.html.

--- a/index.html
+++ b/index.html
@@ -689,6 +689,7 @@
             background-color: rgba(255, 255, 255, 0.1);
             color: var(--white);
             transition: var(--transition);
+            text-decoration: none; /* Add this line */
         }
         
         .social-links a:hover {
@@ -1948,13 +1949,13 @@
             </div>
             <div class="slic-apparel-item" style="background-image: url('//3f811272e605d0fbd18ff3cfe4226002.cdn.bubble.io/f1755871968265x339889704277362100/IMG_6065.jpg')" data-product="black-track-look">
                 <div class="slic-apparel-text">
-                    <h3>Brown Sued Track</h3>
+                    <h3>Brown Suede Track</h3>
                     <p>With White Essential Tee</p>
                 </div>
             </div>
             <div class="slic-apparel-item" style="background-image: url('//3f811272e605d0fbd18ff3cfe4226002.cdn.bubble.io/f1758809622198x585718084406489700/IMG_6070.jpg')" data-product="blue-look">
                 <div class="slic-apparel-text">
-                    <h3>Blue Sued Track</h3>
+                    <h3>Blue Suede Track</h3>
                     <p>With Black Essential Tee</p>
                 </div>
             </div>
@@ -1986,8 +1987,8 @@
                 </div>
                 <div class="tshirt-bottom" data-product="white-tee">
                     <div class="tracksuit-carousel" id="white-tee-carousel">
-                        <div class="carousel-slide active" style="background-image: url('//c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761317109007x577175245706487600/IMG_1941.jpeg')"></div>
-                        <div class="carousel-slide" style="background-image: url('//c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761317165339x389035016898284350/IMG_1943.jpeg')"></div>
+                        <div class="carousel-slide active" style="background-image: url('//c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761322563202x598122510347829000/IMG_1948.jpeg')"></div>
+                        <div class="carousel-slide" style="background-image: url('//c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761322303643x806462659851237600/IMG_1947.jpeg')"></div>
                         <div class="carousel-slide" style="background-image: url('//c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761322141824x750050976866183400/IMG_1946.jpeg')"></div>
                         <div class="carousel-indicators">
                             <span class="carousel-indicator active" data-index="0"></span>
@@ -2011,13 +2012,13 @@
     
     <!-- Tracksuits Section with Carousels -->
     <section class="tracksuits" id="tracksuits">
-        <h2 class="section-title">SUED TRACKSUITS</h2>
+        <h2 class="section-title">SUEDE TRACKSUITS</h2>
         <div class="tracksuit-grid">
             <div class="tracksuit-left" data-product="black-track">
                 <div class="tracksuit-carousel" id="black-track-carousel">
-                    <div class="carousel-slide active" style="background-image: url('//3f811272e605d0fbd18ff3cfe4226002.cdn.bubble.io/f1759095021445x869087379550515800/IMG_6086.jpg')"></div>
-                    <div class="carousel-slide" style="background-image: url('//3f811272e605d0fbd18ff3cfe4226002.cdn.bubble.io/f1759229436210x537132594695960000/IMG_6082.jpg')"></div>
-                    <div class="carousel-slide" style="background-image: url('//3f811272e605d0fbd18ff3cfe4226002.cdn.bubble.io/f1759229382167x971215923725222000/IMG_6084.jpg')"></div>
+                    <div class="carousel-slide active" style="background-image: url('//c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761227170133x600760033093228800/IMG_2002.jpeg')"></div>
+                    <div class="carousel-slide" style="background-image: url('//c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761226949002x248105989040648960/IMG_1991.jpeg')"></div>
+                    <div class="carousel-slide" style="background-image: url('//c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761227133266x118003040509468980/IMG_1995.jpeg')"></div>
                     <div class="carousel-indicators">
                         <span class="carousel-indicator active" data-index="0"></span>
                         <span class="carousel-indicator" data-index="1"></span>
@@ -2032,9 +2033,9 @@
             <div class="tracksuit-right">
                 <div class="tracksuit-top" data-product="blue-track">
                     <div class="tracksuit-carousel" id="blue-track-carousel">
-                        <div class="carousel-slide active" style="background-image: url('//3f811272e605d0fbd18ff3cfe4226002.cdn.bubble.io/f1758809622198x585718084406489700/IMG_6070.jpg')"></div>
-                        <div class="carousel-slide" style="background-image: url('//3f811272e605d0fbd18ff3cfe4226002.cdn.bubble.io/f1756215480441x848034649929445500/IMG_6076.jpg')"></div>
-                        <div class="carousel-slide" style="background-image: url('//3f811272e605d0fbd18ff3cfe4226002.cdn.bubble.io/f1755872055175x320848005050214700/IMG_6072.jpg')"></div>
+                        <div class="carousel-slide active" style="background-image: url('//c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761294102575x984798151546191200/IMG_2001.jpeg')"></div>
+                        <div class="carousel-slide" style="background-image: url('//c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761289096617x259992274447341100/IMG_1960.jpeg')"></div>
+                        <div class="carousel-slide" style="background-image: url('//c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761289210312x561739123039114240/IMG_1963.jpeg')"></div>
                         <div class="carousel-indicators">
                             <span class="carousel-indicator active" data-index="0"></span>
                             <span class="carousel-indicator" data-index="1"></span>
@@ -2373,7 +2374,7 @@
                 ],
                 colors: ['Brown'],
                 sizes: ['S', 'M', 'L', 'XL'],
-                description: 'Black track with black essential tee for a sleek monochrome appearance.'
+                description: 'Brown track with white essential tee for a sleek monochrome appearance.'
             },
             'blue-look': {
                 title: 'Blue Track Look',
@@ -2388,7 +2389,7 @@
                 ],
                 colors: ['Blue'],
                 sizes: ['S', 'M', 'L', 'XL'],
-                description: 'Bold blue track with white essential tee for a striking contrast.'
+                description: 'Bold blue track with black essential tee for a striking contrast.'
             }
         };
 
