--- a/index.html
+++ b/index.html
@@ -2049,9 +2049,9 @@
                 </div>
                 <div class="tracksuit-bottom" data-product="brown-track">
                     <div class="tracksuit-carousel" id="brown-track-carousel">
-                        <div class="carousel-slide active" style="background-image: url('//3f811272e605d0fbd18ff3cfe4226002.cdn.bubble.io/f1756214689153x521013243121781100/IMG_6068.jpg')"></div>
-                        <div class="carousel-slide" style="background-image: url('//3f811272e605d0fbd18ff3cfe4226002.cdn.bubble.io/f1756215246505x740582686771315000/IMG_6122.jpg')"></div>
-                        <div class="carousel-slide" style="background-image: url('//3f811272e605d0fbd18ff3cfe4226002.cdn.bubble.io/f1756214596416x566497322581224000/IMG_6063.jpg')"></div>
+                        <div class="carousel-slide active" style="background-image: url('//c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761585222221x921999152339341200/IMG_1978.jpeg')"></div>
+                        <div class="carousel-slide" style="background-image: url('//c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761227759958x410967114378564300/IMG_1975.jpeg')"></div>
+                        <div class="carousel-slide" style="background-image: url('//c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761227801513x661976210261212500/IMG_1976.jpeg')"></div>
                         <div class="carousel-indicators">
                             <span class="carousel-indicator active" data-index="0"></span>
                             <span class="carousel-indicator" data-index="1"></span>
