--- a/index.html
+++ b/index.html
@@ -1943,19 +1943,19 @@
         <div class="slic-apparel-grid">
             <div class="slic-apparel-item" style="background-image: url('https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761227041938x722153572858523800/IMG_1992.jpeg')" data-product="black-look">
                 <div class="slic-apparel-text">
-                    <h3>Black Tracksuit</h3>
+                    <h3>Obsidion Black Track</h3>
                     <p>With White Essential Tee</p>
                 </div>
             </div>
             <div class="slic-apparel-item" style="background-image: url('//3f811272e605d0fbd18ff3cfe4226002.cdn.bubble.io/f1755871968265x339889704277362100/IMG_6065.jpg')" data-product="black-track-look">
                 <div class="slic-apparel-text">
-                    <h3>Brown Suede Track</h3>
+                    <h3>Earth Brown Suede</h3>
                     <p>With White Essential Tee</p>
                 </div>
             </div>
             <div class="slic-apparel-item" style="background-image: url('//3f811272e605d0fbd18ff3cfe4226002.cdn.bubble.io/f1758809622198x585718084406489700/IMG_6070.jpg')" data-product="blue-look">
                 <div class="slic-apparel-text">
-                    <h3>Blue Suede Track</h3>
+                    <h3>Horizon Blue Suede</h3>
                     <p>With Black Essential Tee</p>
                 </div>
             </div>
@@ -1981,7 +1981,7 @@
                         </div>
                     </div>
                     <div class="tracksuit-text">
-                        <h3>Black Tee</h3>
+                        <h3>Black T-Heart</h3>
                         <button class="shop-now-btn">Shop Now</button>
                     </div>
                 </div>
@@ -1997,7 +1997,7 @@
                         </div>
                     </div>
                     <div class="tracksuit-text">
-                        <h3>White Tee</h3>
+                        <h3>White T-Heart</h3>
                         <button class="shop-now-btn">Shop Now</button>
                     </div>
                 </div>
