--- a/index.html
+++ b/index.html
@@ -1943,7 +1943,7 @@
         <div class="slic-apparel-grid">
             <div class="slic-apparel-item" style="background-image: url('https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761227041938x722153572858523800/IMG_1992.jpeg')" data-product="black-look">
                 <div class="slic-apparel-text">
-                    <h3>Obsidion Black Track</h3>
+                    <h3>Obsidion Black Suede</h3>
                     <p>With White Essential Tee</p>
                 </div>
             </div>
@@ -1981,7 +1981,7 @@
                         </div>
                     </div>
                     <div class="tracksuit-text">
-                        <h3>Black T-Heart</h3>
+                        <h3>Black T*Shirt</h3>
                         <button class="shop-now-btn">Shop Now</button>
                     </div>
                 </div>
@@ -1997,7 +1997,7 @@
                         </div>
                     </div>
                     <div class="tracksuit-text">
-                        <h3>White T-Heart</h3>
+                        <h3>White T*Shirt</h3>
                         <button class="shop-now-btn">Shop Now</button>
                     </div>
                 </div>
@@ -2026,7 +2026,7 @@
                     </div>
                 </div>
                 <div class="tracksuit-text">
-                    <h3>Black Track</h3>
+                    <h3>Obsidian Black </h3>
                     <p>Premium comfort meets minimalist design</p>
                 </div>
             </div>
@@ -2043,7 +2043,7 @@
                         </div>
                     </div>
                     <div class="tracksuit-text">
-                        <h3>Blue Track</h3>
+                        <h3>Horizon Blue Suede </h3>
                         <p>Timeless elegance in monochrome</p>
                     </div>
                 </div>
@@ -2059,7 +2059,7 @@
                         </div>
                     </div>
                     <div class="tracksuit-text">
-                        <h3>Brown Track</h3>
+                        <h3>Earth Brown Suede </h3>
                         <p>Bold statement with premium comfort</p>
                     </div>
                 </div>
@@ -2267,12 +2267,12 @@
                 title: 'Black SLIC Track',
                 price: 2322, // 129 * 18
                 images: [
-                    'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761585421957x803689878143383900/IMG_1992.jpeg',
-                    'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761227133266x118003040509468980/IMG_1995.jpeg',
-                    'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761227063344x651930497420196200/IMG_1993.jpeg',
-                    'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761227170133x600760033093228800/IMG_2002.jpeg',
-                    'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761227104554x655816408329799700/IMG_1994.jpeg',
-                    'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761226949002x248105989040648960/IMG_1991.jpeg'
+                     'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761289137380x206768052457238850/IMG_1961.jpeg',
+                    'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761289177375x828795691971314700/IMG_1962.jpeg',
+                    'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761294102575x984798151546191200/IMG_2001.jpeg',
+                    'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761289096617x259992274447341100/IMG_1960.jpeg',
+                    'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761294054834x120646426753474580/IMG_1965.jpeg',
+                    'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761289210312x561739123039114240/IMG_1963.jpeg'
                 ],
                 colors: ['Charcoal'],
                 sizes: ['S', 'M', 'L', 'XL'],
@@ -2342,7 +2342,7 @@
                 description: 'Classic white t-shirt crafted from soft, breathable cotton for all-day comfort.'
             },
             'black-look': {
-                title: 'Black Tracksuit Look',
+                title: 'Black Obsidian Suede',
                 price: 2322, // 129 * 18
                 images: [
                     'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761226949002x248105989040648960/IMG_1991.jpeg',
@@ -2357,7 +2357,7 @@
                 description: 'Complete black tracksuit look with white essential tee for a classic style.'
             },
             'black-track-look': {
-                title: 'Brown Track Look',
+                title: 'Earth Brown Suede',
                 price: 4050, // 225 * 18
                 images: [
                     'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761227510769x648400193915277400/IMG_1973.jpeg',
@@ -2377,7 +2377,7 @@
                 description: 'Brown track with white essential tee for a sleek monochrome appearance.'
             },
             'blue-look': {
-                title: 'Blue Track Look',
+                title: 'Horizon Blue Suede',
                 price: 4050, // 225 * 18
                images: [
                     'https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761289137380x206768052457238850/IMG_1961.jpeg',
