--- a/index.html
+++ b/index.html
@@ -1889,7 +1889,7 @@
         <div class="nav-links">
             <a href="#collections" class="active">Collections</a>
             <a href="#tracksuits">Tracksuits</a>
-            <a href="#tshirts">T-Shirts</a>
+            <a href="#tshirts">T*Shirts</a>
             <a href="#subscription">Subscribe</a>
         </div>
         <div class="nav-icons">
@@ -1915,7 +1915,7 @@
         <div class="mobile-nav-links">
             <a href="#collections" class="active">Collections</a>
             <a href="#tracksuits">Tracksuits</a>
-            <a href="#tshirts">T-Shirts</a>
+            <a href="#tshirts">T*Shirts</a>
             <a href="#subscription">Subscribe</a>
         </div>
     </div>
@@ -1943,7 +1943,7 @@
         <div class="slic-apparel-grid">
             <div class="slic-apparel-item" style="background-image: url('https://c0ce44850062aff4dd3ea680aef2d5cb.cdn.bubble.io/f1761227041938x722153572858523800/IMG_1992.jpeg')" data-product="black-look">
                 <div class="slic-apparel-text">
-                    <h3>Obsidion Black Suede</h3>
+                    <h3>Obsidian Black Suede</h3>
                     <p>With White Essential Tee</p>
                 </div>
             </div>
@@ -2026,7 +2026,7 @@
                     </div>
                 </div>
                 <div class="tracksuit-text">
-                    <h3>Obsidian Black </h3>
+                    <h3>Obsidian Black Suede </h3>
                     <p>Premium comfort meets minimalist design</p>
                 </div>
             </div>
