Update contact information in index.html

--- a/index.html
+++ b/index.html
@@ -4287,7 +4287,7 @@ const faqDatabase = {
     },
     'contact': {
         question: "Contact Customer Service",
-        answer: "📞 **We're here to help!** \n\n• Email: support@slicapparel.com\n• Response time: Within 24 hours\n• Phone: +27 11 123 4567 (9AM-5PM SAST)\n• Live chat: Available on website\n• Social media: @slicapparel"
+        answer: "📞 **We're here to help!** \n\n• Email: management@slic.live\n• Response time: Within 24 hours\n• Phone: +27 79 177 2581 (9AM-5PM SAST)\n• Live chat: Available on website\n• Social media: @slicapparel"
     }
 };
 
