--- a/index.html
+++ b/index.html
@@ -2793,13 +2793,14 @@
     <script>
         // Firebase configuration - REPLACE WITH YOUR ACTUAL CONFIG
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_PROJECT_ID.appspot.com",
-            messagingSenderId: "YOUR_SENDER_ID",
-            appId: "YOUR_APP_ID"
-        };
+              apiKey: "AIzaSyDA1zJWog5K9t7K2y2zKq-QFvp1d4QunjM",
+              authDomain: "slic-ab4e2.firebaseapp.com",
+              projectId: "slic-ab4e2",
+              storageBucket: "slic-ab4e2.firebasestorage.app",
+              messagingSenderId: "943488332432",
+              appId: "1:943488332432:web:b27d3b1874b005ddde5e15",
+              measurementId: "G-KHLV9WGFCC"
+            };
 
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
